<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_1">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="160dp"
        android:layout_height="180dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/loading"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/doctorre" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="280dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-black"
        android:text="Recover your Password"
        android:textAlignment="center"
        android:textColor="#051159"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/f_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView1" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:id="@+id/f_phone"
        android:hint="Enter your Phone"
        app:hintTextColor="@color/white"
        android:background="@drawable/shape"
        android:textColorHint="@color/white"
        android:paddingStart="10dp"
        app:layout_constraintBottom_toTopOf="@+id/f_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:inputType="phone">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>


    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.568" />

    <Button
        android:id="@+id/f_button"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/button"
        android:text="@string/recoverbutton"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/f_phone" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="228dp"
        android:layout_height="45dp"
        android:layout_marginBottom="36dp"
        android:fontFamily="cursive"
        android:text="@string/docdoc3"
        android:textAlignment="center"
        android:textColor="#051159"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/f_button"
        app:layout_constraintVertical_bias="0.969" />

</androidx.constraintlayout.widget.ConstraintLayout>