<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_1">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="280dp"
        android:layout_height="35dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="65dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/registration_for_patient"
        android:textAlignment="center"
        android:textColor="#051159"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/P_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:id="@+id/P_username"
        app:hintTextColor="@color/white"
        android:hint="Enter your name"
        android:background="@drawable/shape"
        android:textColorHint="@color/white"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:inputType="text">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:id="@+id/P_contact"
        android:hint="Contact Number"
        android:background="@drawable/shape"
        android:textColorHint="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/P_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/P_email"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:inputType="phone">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:id="@+id/P_email"
        android:hint="Email"
        app:hintTextColor="@color/white"
        android:background="@drawable/shape"
        android:textColorHint="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/P_contact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/P_username"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:inputType="textEmailAddress">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:id="@+id/P_password"
        android:hint="Password"
        app:passwordToggleEnabled="true"
        app:hintTextColor="@color/white"
        android:background="@drawable/shape"
        android:textColorHint="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/P_confirmpass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/P_contact"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:inputType="textPassword">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:id="@+id/P_confirmpass"
        app:hintTextColor="@color/white"
        android:hint="Confirm Password"
        app:passwordToggleEnabled="true"
        android:background="@drawable/shape"
        android:textColorHint="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/P_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/P_password"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:inputType="textPassword">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/P_button"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:background="@drawable/button"
        android:text="@string/P_button"
        android:onClick="P_registration"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/P_confirmpass" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="228dp"
        android:layout_height="45dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="91dp"
        android:layout_marginBottom="36dp"
        android:fontFamily="cursive"
        android:text="@string/docdoc3"
        android:textAlignment="center"
        android:textColor="#051159"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/P_button" />

</androidx.constraintlayout.widget.ConstraintLayout>